try to analyze swagger object to sdk info

--- a/codegen/src/main/resources/java/pom.xml.mustache
+++ b/codegen/src/main/resources/java/pom.xml.mustache
@@ -2,30 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>{{artifactId}}</artifactId>
-        <groupId>{{groupId}}</groupId>
-        <version>{{version}}</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>area-sdk</artifactId>
-
-    <properties>
-        <assertj.version>1.5.0</assertj.version>
-        <okhttp.version>2.3.0</okhttp.version>
-    </properties>
+    <groupId>{{groupId}}</groupId>
+    <artifactId>{{artifactId}}</artifactId>
+    <version>{{version}}</version>
 
     <dependencies>
-        <dependency>
-            <groupId>com.squareup.okhttp</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>${okhttp.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-        </dependency>
         <dependency>
             <groupId>cn.cloudtop.common</groupId>
             <artifactId>common-api-basic</artifactId>
@@ -36,21 +19,10 @@
             <artifactId>guava</artifactId>
             <version>18.0</version>
         </dependency>
-
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>${assertj.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
+            <groupId>com.github.spullara.mustache.java</groupId>
+            <artifactId>compiler</artifactId>
+            <version>0.9.1</version>
         </dependency>
     </dependencies>
-
 </project>
